bk_ida/gccida/c2/ix86_expand_setcc
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_setcc/src/i386.c:8430:25: error: must use 'enum' tag to refer to type 'rtx_code'
int  ix86_expand_setcc( rtx_code code, rtx dest) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_setcc/src/i386.c:8454:17: error: expected expression
if ( *( _OWORD *)arg1 != 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_setcc/src/i386.c:8454:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)arg1 != 0LL ) 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_setcc/src/i386.c:8464:59: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
+ ( unsigned __int16)reverse_condition_maybe_unordered( ( rtx_code)*( unsigned __int16 *)arg1[0]) 
                                                          ^~~~~~~~
                                                          rtx_cost
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_setcc/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_setcc/src/i386.c:8464:68: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
+ ( unsigned __int16)reverse_condition_maybe_unordered( ( rtx_code)*( unsigned __int16 *)arg1[0]) 
                                                        ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_setcc/src/obj/i386.o] Error 1
